Costs - import & test & structure

--- a/app/views/vehicle_usage_sets/_form.html.haml
+++ b/app/views/vehicle_usage_sets/_form.html.haml
@@ -86,7 +86,7 @@
       %p.help-block= t '.work_time_help'
   #vehicle_usage_set_display_costs.row
     %label.col-md-offset-2.col-md-8.field
-      = t 'activerecord.attributes.vehicle_usage_sets.costs'
+      = t 'activerecord.attributes.vehicle_usage_set.costs'
     .col-md-offset-2.col-md-8.field
       .input-group
         = number_field :vehicle_usage_set, :cost_fixed,
