--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -12,7 +12,7 @@ $menu-width: 70px;
 
 $lightgrey-color: #F4FAFB;
 $grey-color: #bdc3c4;
-$primary-color: #01387b;
+$primary-color: #25417c;
 $primary-border-color: #86aad6;
 $primary-background-color: #f3f6fe;
 $secondary-color: #477FA2;
@@ -52,7 +52,7 @@ $transition-timing-curve-delayed: .5s;
   --gray-700: #495057;
   --gray-800: #343a40;
   --gray-900: #212529;
-  --primary: #01387b;
+  --primary: #25417c;
   --secondary: #6c757d;
   --success: #198754;
   --info: #0dcaf0;
