--- a/app/views/index/_subscription_on.html.haml
+++ b/app/views/index/_subscription_on.html.haml
@@ -11,44 +11,19 @@
         = t('index.motto')
 
   - if !current_user.admin?
-    .row.m-4.d-flex.justify-content-center
-      .col-md-2
-        .card.shadow{style: "border-radius: 10px; transition: transform 0.2s;"}
-          .card-body.d-flex.flex-column.justify-content-center.align-items-center
-            %h3.card-title.text-center.fw-bold.text-uppercase= t 'activerecord.models.plannings', :count => @kpis[:plannings][:total]
-            %span.card-text.h5= @kpis[:plannings][:total]
-      .col-md-2 
-        .card.shadow{style: "border-radius: 10px; transition: transform 0.2s;"}
-          .card-body.d-flex.flex-column.justify-content-center.align-items-center
-            %h3.card-title.text-center.fw-bold.text-uppercase= t 'activerecord.models.zonings', :count => @kpis[:zonings][:total]
-            %span.card-text.h5= @kpis[:zonings][:total]
-      .col-md-2 
-        .card.shadow{style: "border-radius: 10px; transition: transform 0.2s;"}
-          .card-body.d-flex.flex-column.justify-content-center.align-items-center
-            %h3.card-title.text-center.fw-bold.text-uppercase= t 'activerecord.models.destinations', :count => @kpis[:destinations][:total]
-            %span.card-text.h5= @kpis[:destinations][:total]
-      .col-md-2 
-        .card.shadow{style: "border-radius: 10px; transition: transform 0.2s;"}
-          .card-body.d-flex.flex-column.justify-content-center.align-items-center
-            %h3.card-title.text-center.fw-bold.text-uppercase= t 'activerecord.models.stores', :count => @kpis[:stores][:total]
-            %span.card-text.h5= @kpis[:stores][:total]
-      .col-md-2 
-        .card.shadow{style: "border-radius: 10px; transition: transform 0.2s;"}
-          .card-body.d-flex.flex-column.justify-content-center.align-items-center
-            %h3.card-title.text-center.fw-bold.text-uppercase= t 'activerecord.models.vehicles', :count => @kpis[:vehicles][:total]
-            %span.card-text.h5= @kpis[:vehicles][:total]
-
     .row.m-4.justify-content-center
       .col-md-4.my-4
-        .card.shadow{style: "border-radius: 10px; transition: transform 0.2s;"}
+        .card.shadow{style: "border-radius: 10px; transition: transform 0.2s; box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);"}
           .card-body
+            %h3.card-title.fw-bold
+              %i.fa.fa-map-location.fa-fw
+              = t 'admin.users.kpi.plannings.last', count: @kpis[:plannings][:total]
             - if @kpis[:plannings][:total] == 0
-              %h3.card-title.fw-bold= I18n.t('activerecord.models.plannings.other')
               %p.card-text.text-muted= I18n.t('admin.users.kpi.plannings.none')
               = link_to new_planning_path, class: "btn btn-primary" do
                 = I18n.t('admin.users.kpi.plannings.create')
             - else
-              %h3.card-title.fw-bold= t 'admin.users.kpi.plannings.last'
+    
               .table-responsive
                 %table.table.table-hover
                   %thead
@@ -79,16 +54,23 @@
                         %td.text-right
                           = link_to edit_planning_path(planning), :class => "btn btn-primary btn-sm" do
                             %i.fa.fa-edit.fa-fw
+          - if @kpis[:plannings][:total] > 5
+            .card-footer.text-center
+              = link_to plannings_path do
+                = I18n.t('admin.users.kpi.plannings.show')
+
       .col-md-4.my-4
-        .card.shadow{style: "border-radius: 10px; transition: transform 0.2s;"}
+        .card.shadow{style: "border-radius: 10px; transition: transform 0.2s; box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);"}
           .card-body
+            %h3.card-title.fw-bold
+              %i.fa.fa-draw-polygon.fa-fw
+              = t 'admin.users.kpi.zonings.last', count: @kpis[:zonings][:total]
             - if @kpis[:zonings][:total] == 0
-              %h3.card-title.fw-bold= I18n.t('activerecord.models.zonings.other')
               %p.card-text.text-muted= I18n.t('admin.users.kpi.zonings.none')
               = link_to new_zoning_path, class: "btn btn-primary" do
                 = I18n.t('admin.users.kpi.zonings.create')
             - else
-              %h3.card-title.fw-bold= t 'admin.users.kpi.zonings.last'
+    
               .table-responsive
                 %table.table.table-hover
                   %thead
@@ -106,16 +88,46 @@
                         %td.text-right
                           = link_to edit_zoning_path(zoning), :class => "btn btn-primary btn-sm" do
                             %i.fa.fa-edit.fa-fw
+          - if @kpis[:zonings][:total] > 5
+            .card-footer.text-center
+              = link_to zonings_path do
+                = I18n.t('admin.users.kpi.zonings.show')
+
       .col-md-4.my-4
-        .card.shadow{style: "border-radius: 10px; transition: transform 0.2s;"}
+        .card.shadow{style: "border-radius: 10px; transition: transform 0.2s; box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);"}
           .card-body
+            .d-flex.justify-content-between
+              %h3.card-title.fw-bold
+                %i.fa.fa-map-marker.fa-fw
+                = t 'admin.users.kpi.destinations.last', count: @kpis[:destinations][:total]
+  
+            %ul.nav.nav-pills.nav-fill.d-flex.flex-column
+              %li.nav-item
+                = link_to destinations_path do
+                  %i.fa.fa-map-marker.fa-fw
+                  = t 'admin.users.kpi.destinations.show'
+              %li.nav-item
+                = link_to destination_import_path do
+                  %i.fa.fa-upload.fa-fw
+                  = t 'admin.users.kpi.destinations.import'
+              %li.nav-item
+                = link_to destinations_path({format: :excel}) do
+                  %i.fa.fa-download.fa-fw
+                  = t 'admin.users.kpi.destinations.export' 
+
+    .row.m-4.justify-content-center
+      .col-md-4.my-4
+        .card{style: "border-radius: 10px; transition: transform 0.2s; box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);"}
+          .card-body
+            %h3.card-title.fw-bold
+              %i.fa.fa-store.fa-fw
+              = t 'admin.users.kpi.stores.last', count: @kpis[:stores][:total]
             - if @kpis[:stores][:total] == 0
-              %h3.card-title.fw-bold= I18n.t('activerecord.models.stores.other')
               %p.card-text.text-muted= I18n.t('admin.users.kpi.stores.none')
               = link_to new_store_path, class: "btn btn-primary" do
                 = I18n.t('admin.users.kpi.stores.create')
             - else
-              %h3.card-title.fw-bold= t 'admin.users.kpi.stores.last'
+    
               .table-responsive
                 %table.table.table-hover
                   %thead
@@ -139,53 +151,24 @@
                         %td.text-right
                           = link_to edit_store_path(store), :class => "btn btn-primary btn-sm" do
                             %i.fa.fa-edit.fa-fw
+          -if @kpis[:stores][:total] > 5
+            .card-footer.text-center
+              = link_to stores_path do
+                = I18n.t('admin.users.kpi.stores.show')
 
-    .row.m-4.justify-content-center
-      .col-md-4.my-4
-        .card.shadow{style: "border-radius: 10px; transition: transform 0.2s;"}
-          .card-body
-            - if @kpis[:destinations][:total] == 0
-              %h3.card-title.fw-bold= I18n.t('activerecord.models.destinations.other')
-              %p.card-text.text-muted= I18n.t('admin.users.kpi.destinations.none')
-              = link_to new_store_path, class: "btn btn-primary" do
-                = I18n.t('admin.users.kpi.destinations.create')
-              
-            - else
-              %h3.card-title.fw-bold= t 'admin.users.kpi.destinations.last'
-              .table-responsive
-                %table.table.table-hover
-                  %thead
-                    %tr
-                      %th= t 'activerecord.attributes.destination.ref'
-                      %th= t 'activerecord.attributes.destination.name'
-                      %th= t 'activerecord.attributes.destination.city'
-                      %th= t 'activerecord.attributes.destination.updated_at'
-                      %th
-                  %tbody
-                    - @kpis[:destinations][:last].each do |destination|
-                      %tr
-                        %td
-                          = destination.ref
-                        %td
-                          = destination.name
-                        %td
-                          = destination.city
-                        %td
-                          = destination.updated_at.strftime(I18n.t('admin.users.kpi.format'))
-                        %td.text-right
-                          = link_to edit_destination_path(destination), :class => "btn btn-primary btn-sm" do
-                            %i.fa.fa-edit.fa-fw
       - if @kpis[:vehicles][:nb_set] < 2
         .col-md-4.my-4
-          .card.shadow{style: "border-radius: 10px; transition: transform 0.2s;"}
+          .card.shadow{style: "border-radius: 10px; transition: transform 0.2s; box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);"}
             .card-body
+              %h3.card-title.fw-bold
+                %i.fa.fa-truck-field.fa-fw
+                = t 'admin.users.kpi.vehicles.last', count: @kpis[:vehicles][:total]
               - if @kpis[:vehicles][:total] == 0
-                %h3.card-title.fw-bold= I18n.t('activerecord.models.vehicles.other')
                 %p.card-text.text-muted= I18n.t('admin.users.kpi.vehicles.none')
                 = link_to new_store_path, class: "btn btn-primary" do
                   = I18n.t('admin.users.kpi.vehicles.create')
               - else
-                %h3.card-title.fw-bold= t 'admin.users.kpi.vehicles.last'
+      
                 .table-responsive
                   %table.table.table-hover
                     %thead
@@ -209,40 +192,7 @@
                           %td.text-right
                             = link_to edit_vehicle_usage_path(vehicle), :class => "btn btn-primary btn-sm" do
                               %i.fa.fa-edit.fa-fw
-      .col-md-4.my-4
-        .card.shadow{style: "border-radius: 10px; transition: transform 0.2s;"}
-          .card-body
-            - if @kpis[:statistics][:exists]
-              = link_to statistics_path, class: "btn btn-primary" do
-                = I18n.t('admin.users.kpi.statistics')
-            - else
-              %h3.card-title.fw-bold Configuration
-              %p.card-text.text-muted= I18n.t('admin.users.kpi.statistics.none')
-            - if @kpis[:vehicles][:nb_set] > 1
-              = link_to vehicles_path, class: "btn btn-primary" do
-                = I18n.t('admin.users.kpi.vehicles.show')
-:css
-  .table td {
-    vertical-align: middle;
-    padding: 1rem 0.75rem;
-  }
-  
-  .table tbody tr {
-    border-bottom: 1px solid #e9ecef;
-  }
-  
-  .table tbody tr:last-child {
-    border-bottom: none;
-  }
-
-  .shadow {
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
-  }
-
-  .flex-column {
-    flex-direction: column !important;
-  }
-
-  .m-4 {
-    margin: 1.5rem !important;
-  }
+            - if @kpis[:vehicles][:total] > 5
+              .card-footer.text-center
+                = link_to vehicle_usage_sets_path do
+                  = I18n.t('admin.users.kpi.vehicles.show')
