Edit SMS display

--- a/app/assets/stylesheets/customers.css.scss
+++ b/app/assets/stylesheets/customers.css.scss
@@ -34,7 +34,7 @@
     display: none;
   }
 
-  #sms_character_count {
+  #sms_character_count, #sms_driver_character_count {
     text-align: right;
     font-size: smaller;
   }
