--- a/app/views/stops/_out_list_next_link.html.haml
+++ b/app/views/stops/_out_list_next_link.html.haml
@@ -2,4 +2,4 @@
   %span#out_list_next_link.pagy.d-none
     = pagy_next_a(out_pagy, anchor_string: 'data-remote="true"', page_param: :out_page)
   %span#loading-indicator.out-content.list-group-item.d-flex.justify-content-center.d-none
-    .spinner-border{role: "status"}
+    .spinner-border.spinner-border-default{role: "status"}
