--- a/app/templates/stops/_show.mustache
+++ b/app/templates/stops/_show.mustache
@@ -114,6 +114,7 @@
   {{#wait_time}}<li><i class="fa fa-stopwatch fa-fw"></i> {{#i18n}}plannings.edit.wait{{/i18n}} {{wait_time}}</li>{{/wait_time}}
   {{#duration}}<li><i class="fa fa-stopwatch fa-fw"></i> {{#i18n}}plannings.edit.popup.duration{{/i18n}} {{duration}}</li>{{/duration}}
   {{#priority_text}}<li><i class="fa fa-signal fa-fw"></i> {{#i18n}}plannings.edit.popup.priority{{/i18n}} {{priority_text}}</li>{{/priority_text}}
+  {{#revenue}}<li><i class="fa fa-hand-holding-dollar fa-fw"></i> {{#i18n}}plannings.edit.popup.revenue{{/i18n}} {{revenue}} {{prefered_currency}}</li>{{/revenue}}
   {{#quantities}}
     <li><i class="fa {{unit_icon}} fa-fw"></i> {{#i18n}}plannings.edit.popup.quantity{{/i18n}} {{quantity_formatted}}</li>
   {{/quantities}}
